# Material-Visualizer

./: CMakeLists.txt  README.md  configureFile.h.in  main.cpp  parser.cpp  parser.h  visualizer.cpp  visualizer.h
example_data/: Ba(PdS2)2.json  Nb2CoO6.json
